# retail-demand-forecasting-system

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Caddyfile  Dockerfile  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  guion_tfg.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: default.yaml  drift_retrain.yaml  experiment.yaml  experiment_daily.yaml  experiment_large.yaml  imputation_compare.yaml  imputation_comparison.yaml  simulation.yaml  tuning.yaml
docs/: business_case.md  config_reference.md  conventions.md  experimental_design.md  function_glossary.md  invariants.md  system_design.md  technical_specifications.md  tfg_methodology_log.md  tfg_proposal.md
docs/contracts/: dataframes.md
docs/decisions/: ADR-0001-observed-demand-not-latent-demand.md  ADR-0002-walk-forward-validation.md  ADR-0003-newsvendor-v1-policy.md
docs/plans/: 2026-04-17-harness-engineering.md  2026-04-27-dashboard-implementation.md  tfg-implementation-ideas.md
memoria/: main.tex  main_review.tex  references.bib
memoria/chapters/: 01_introduccion.tex  02_estado_del_arte.tex  03_analisis_datos.tex  03_metodologia.tex  04_implementacion.tex  04_metodologia.tex  05_implementacion.tex  05_resultados.tex  06_conclusiones.tex  06_resultados.tex  07_conclusiones.tex  08_presupuesto.tex  abstracts.tex  agradecimientos.tex  anexo_abreviaturas.tex  anexo_dashboard.tex  anexo_ods.tex
memoria/tables/: table_costs.tex  table_predictive.tex
notebooks/: metrics_walkthrough.ipynb  page_hinkley_detector_tutorial.ipynb  pipeline_walkthrough.ipynb  tuning_exploration.ipynb
scripts/: build_ops_sim_split.py  generate_drift_report.py
src/retail_forecasting/: CONFIG_FLOW.md  EXPERIMENT_FLOW.md  RUN_FLOW.md  __init__.py  config.py  run.py
src/retail_forecasting/api/: main.py
src/retail_forecasting/api/static/: index.html
src/retail_forecasting/contracts/: __init__.py  backtesting.py  business.py  contracts_business.py  contracts_config.py  contracts_drift.py  contracts_engineering.py  contracts_quality.py  contracts_tuning.py  data_quality.py  tuning.py
src/retail_forecasting/data/: DATA_LOAD_FLOW.md  PREPARE_PANEL_FLOW.md  RAW_DATA_FLOW.md  __init__.py  censorship.py  dataset.py  fresh_retailnet.py  quality.py
src/retail_forecasting/drift/: __init__.py  detectors.py  psi.py  regime.py  regime_analysis.py
src/retail_forecasting/eda/: __init__.py  acf_plot.py  category_heatmap.py  figure_exports.py  plots.py  profiling.py  reporting.py  run.py  stockout.py  temporal.py
src/retail_forecasting/evaluation/: metrics.py  mlflow_logger.py  post_mortem.py  reporting.py  sensitivity.py  xai.py
src/retail_forecasting/features/: FEATURE_ENGINEERING_FLOW.md  __init__.py  engineering.py
src/retail_forecasting/forecasting/: EXPERIMENT_FLOW.md  STRATEGY_EXECUTION_FLOW.md  WALK_FORWARD_FOLDS_FLOW.md  __init__.py  backtesting.py  pipeline.py  rolling_window.ipynb
src/retail_forecasting/inventory/: COST_PROFILES_FLOW.md  __init__.py  cost_profiles.py  newsvendor.py  optimization.py  simulation.py
src/retail_forecasting/models/: _quantile_forecaster.py  boosting.py  catboosting.py  conformal.py  linear.py  naive.py  optimization.py  statistical.py
src/retail_forecasting/simulation/: __init__.py  operations.py
src/retail_forecasting/utils/: io.py  latex_exporter.py
src/retail_forecasting/visualization/: __init__.py  dashboard.py  plots.py
tests/: __init__.py  conftest.py  test_api.py  test_architecture_imports.py  test_backtesting.py  test_business_outputs.py  test_config_contract.py  test_data_quality.py  test_dataframe_contracts.py  test_docs_references.py  test_drift_psi.py  test_eda_module.py  test_features.py  test_generated_artifact_boundaries.py  test_inventory.py  test_metrics.py  test_operational_simulation.py  test_quantile_contract.py  test_raw_column_boundaries.py  test_run_cli.py  test_smoke.py  test_temporal_leakage_contract.py  test_tfg_innovations.py
tmp/pdfs/: app_summary.html
