[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-demand-forecasting-system"
version = "0.1.0"
description = "Research-oriented retail demand forecasting pipeline for inventory decisions under uncertainty."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "catboost>=1.2.10",
  "fsspec>=2024.6.1",
  "huggingface-hub>=0.30.0",
  "matplotlib>=3.9.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "plotly>=6.7.0",
  "pmdarima>=2.1.1",
  "pyarrow>=16.1.0",
  "PyYAML>=6.0.2",
  "scikit-learn>=1.5.0",
  "scipy>=1.11.0",
  "shap>=0.45.0",
  "streamlit>=1.56.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "optuna>=4.0.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
ml = [
  "lightgbm>=4.5.0",
  "xgboost>=2.1.0",
]

[project.scripts]
retail-forecast = "retail_forecasting.run:main"
retail-eda = "retail_forecasting.eda.run:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.27.0",
]
