[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retail-demand-forecasting-system"
description = "Research-oriented retail demand forecasting pipeline for inventory decisions under uncertainty."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE"]
authors = [
  {name = "Artem Mindlin", email = "mindlinartem09@gmail.com"},
]
keywords = [
  "forecasting",
  "demand-forecasting",
  "retail",
  "inventory-optimization",
  "uncertainty",
  "machine-learning",
  "catboost",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "catboost>=1.2.10",
  "fsspec>=2024.6.1",
  "joblib>=1.3.0",
  "huggingface-hub>=0.30.0",
  "matplotlib>=3.9.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "plotly>=6.7.0",
  "pyarrow>=16.1.0",
  "PyYAML>=6.0.2",
  "scikit-learn>=1.5.0",
  "scipy>=1.11.0",
  "shap>=0.45.0",
  "streamlit>=1.56.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "mlflow>=2.11.0",
  "optuna>=4.0.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "lightgbm>=4.5.0",
  "datasets>=4.8.5",
  "pandera>=0.31.1",
]

[project.urls]
Homepage = "https://github.com/ArtemMindlin/retail-demand-forecasting-system"
Repository = "https://github.com/ArtemMindlin/retail-demand-forecasting-system"
Issues = "https://github.com/ArtemMindlin/retail-demand-forecasting-system/issues"
Changelog = "https://github.com/ArtemMindlin/retail-demand-forecasting-system/blob/main/README.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]
ml = [
  "xgboost>=2.1.0",
]

[project.scripts]
retail-forecast = "retail_forecasting.run:main"
retail-eda = "retail_forecasting.eda.run:main"

[tool.hatch.version]
path = "src/retail_forecasting/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_forecasting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=retail_forecasting --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["retail_forecasting"]

[tool.mypy]
python_version = "3.11"
exclude_gitignore = true
strict_equality = true
extra_checks = true
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
enable_error_code = ["ignore-without-code"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "mypy>=1.9.0",
    "ruff>=0.4.1",
    "pre-commit>=4.0.0",
]
